<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_empty_view_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/empty_view_text_main"
            android:textSize="25sp"
            android:gravity="center">

        </TextView>

        <com.birdbathapps.HappyAlarmClock.adapters.EmptyRecyclerView
            android:id="@+id/recycler_view_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            tools:mContext=".MainActivity">

        </com.birdbathapps.HappyAlarmClock.adapters.EmptyRecyclerView>
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/outline_alarm_add_24"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|center"
        android:onClick="newTimePickerDialog">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>
</androidx.coordinatorlayout.widget.CoordinatorLayout>