...
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkbox_repeat"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:contentDescription="@string/description_repeat_alarm"
        android:button="@drawable/checkbox_custom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/switch_alarm"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
