...
    <string name="alarm_set_message_less_than_minute">Alarm set for less than %1$s minute from now.</string>
    <string name="alarm_sounding_message">Alarm sounding</string>
    <string name="alarm_snoozed_content_title">Alarm snoozed</string>
    <string name="alarm_notification_channel_name">Alarm notification channel</string>
    <string name="empty_view_text_main">No alarms</string>
    <string name="empty_view_text_gallery">No photos</string>
    <string name="description_repeat_alarm">Repeat Alarm</string>
    <string name="description_dismiss_alarm">Dismiss Alarm</string>
    <string name="description_ringtone_picker">Ringtone Picker</string>
    <string name="action_share">Share Photo</string>
    <string name="action_delete">Delete Photo</string>
    <string name="activity_gallery_title">Gallery</string>
    <string name="action_gallery">Open Gallery</string>
...
